crates/xlate/tests/snapshots/golden_matrix__tools_strict_explicit_true__gpt-4o-mini__20260910__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Make a code and call the tool."
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "make_code",
        "description": "Make a code.",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "code": {
              "minLength": 2,
              "type": "string"
            }
          },
          "required": [
            "code"
          ],
          "type": "object"
        },
        "strict": true
      }
    }
  ],
  "max_completion_tokens": 128
}
--- headers ---
upstream_streams: false
--- degraded ---
